# topology-nexus-app

./: .gitignore  DOCKER_SETUP.md  INTEGRATION_GUIDE.md  QUICK_START.md  README.md  demo.py  docker-compose.yml  llms-full.txt  llms-medium.txt  llms-small.txt  llms.txt  main.py  package.json  requirements.txt
config/: default_config.json  tensorrt_llm_environment.json
desktop/: .gitignore  README.md  package.json  svelte.config.js  tauri.conf.json  tsconfig.json  vite.config.ts
desktop/scripts/: generate-llms-docs.ts
desktop/src-tauri/: Cargo.toml
desktop/src-tauri/src/: main.rs
docker/nginx/: nginx.conf
docker/postgres/: init.sql
docs/llms/: configuration-guide.json  desktop-overview.md  embedding-tasks.jsonl  index.json  python-pipeline.md
examples/docs/: drizzle_orm_overview.html  typescript_handbook_intro.html  uno_css_getting_started.html
examples/nodejs/: api-example.js  couchdb-example.js  minio-example.js  pg-example.js
examples/python/: couchdb_example.py  minio_example.py  pg_example.py
jsonlines/: __init__.py
numpy/: __init__.py
requests/: __init__.py
safetensors/: __init__.py
safetensors/torch/: __init__.py
services/go-nats-quic/: main.go
src/qlora/: dataset_builder.py  memory_manager.js  model_converter.py  ollama_embeddings.py  run_qlora.py  training_spec.py
src/scraper/: langextract_pipeline.py  web_scraper.py
src/semantic/: index_builder.py  text_processor.py  vector_registry.py  (+1 more)
tests/: conftest.py  test_dataset_builder.py  test_langextract_pipeline.py  test_model_converter.py  test_qlora.js  test_semantic_index.py
(+5 files in other folders)
