[package]
name = "topology-nexus-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = ["dialog-open", "shell-open"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
walkdir = "2.5"
scraper = "0.19"
reqwest = { version = "0.11", features = ["json", "blocking"] }
anyhow = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = []
